--- a/lib/app/templates/SureSites.html
+++ b/lib/app/templates/SureSites.html
@@ -12,20 +12,20 @@
                         <input type="checkbox" id='${id}_visibility'
                             value='${suresitesLayerIndex}'
                             data-dojo-attach-point='visibilityChbx'
-                            data-dojo-attach-event='change: toggleLayer'>
+                            data-dojo-attach-event='change: toggleLayer' checked>
                         <label for="${id}_visibility">Sure Sites</label>
                     </li>
                 </ul>
                 <hr>
                 <ul class='indent'>
                     <li class='radio'>
-                        <input type="radio" id='${id}_all' name='suresites_radio' checked disabled
+                        <input type="radio" id='${id}_all' name='suresites_radio' checked
                             data-dojo-attach-point='allRB'
                             data-dojo-attach-event='change: onRadioChange'>
                         <label for="${id}_all">All</label>
                     </li>
                     <li class="radio">
-                        <input type="radio" id='${id}_filter' name='suresites_radio' disabled
+                        <input type="radio" id='${id}_filter' name='suresites_radio'
                             data-dojo-attach-point='filterRB'
                             data-dojo-attach-event='change: onRadioChange'>
                         <label for="${id}_filter">Filtered</label>
