--- a/lib/app/templates/ReportTemplate.html
+++ b/lib/app/templates/ReportTemplate.html
@@ -124,7 +124,7 @@
 
 <a href="#demographics" data-toggle="collapse">
     <h3 class="demographics">
-        Workforce
+        Economy
         <span class="glyphicon glyphicon-chevron-down"></span>
     </h3>
 </a>
@@ -142,7 +142,7 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each workforce.enterprise_zone}}
+                {{#each economy.enterprise_zone}}
                 <tr>
                     <td>{{ZONENAME}}</td>
                     <td>{{EXPYR}}</td>
@@ -159,7 +159,7 @@
     <div class="table-responsive">
         <table class="table table-striped table-condensed table-hover">
             <tbody>
-                {{#each workforce.county_demographics.topten}}
+                {{#each economy.county_demographics.topten}}
                 <tr>
                     <td>{{rank}}</td>
                     <td>{{desc}}</td>
@@ -175,23 +175,23 @@
             <tbody>
                 <tr>
                     <td>Median Age</td>
-                    <td>{{workforce.county_demographics.Median_Age}}</td>
+                    <td>{{economy.county_demographics.Median_Age}}</td>
                 </tr>
                 <tr>
                     <td>High School Graduates (Age 25 or Higher)</td>
-                    <td>{{workforce.county_demographics.educationHighSchoolGraduate}}%</td>
+                    <td>{{economy.county_demographics.educationHighSchoolGraduate}}%</td>
                 </tr>
                 <tr>
                     <td>Bachelor's Degree or Greater (Age 25 or Higher)</td>
-                    <td>{{workforce.county_demographics.educationBachelorOrGreater}}%</td>
+                    <td>{{economy.county_demographics.educationBachelorOrGreater}}%</td>
                 </tr>
                 <tr>
                     <td>Average Household Monthly Income</td>
-                    <td>${{workforce.county_demographics.Avg_MonthlyIncome}}</td>
+                    <td>${{economy.county_demographics.Avg_MonthlyIncome}}</td>
                 </tr>
                 <tr>
                     <td>Average Household Annual Income</td>
-                    <td>${{workforce.county_demographics.Avg_HouseIncome}}</td>
+                    <td>${{economy.county_demographics.Avg_HouseIncome}}</td>
                 </tr>
             </tbody>
         </table>
@@ -207,7 +207,7 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each workforce.schools}}
+                {{#each economy.schools}}
                 <tr>
                     <td>{{name}}</td>
                     <td>{{drive_time}}</td>
