--- a/lib/app/templates/ReportTemplate.html
+++ b/lib/app/templates/ReportTemplate.html
@@ -155,6 +155,24 @@
         </table>
     </div>
 
+    <h4 class="demographics">Tax Increment Areas</h4>
+    <div class="table-responsive">
+        <table class="table table-striped table-condensed table-hover">
+            <thead>
+                <tr>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each economy.tax_entities}}
+                <tr>
+                    <td>{{ENT_DESC}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
+
     <h4 class="demographics">Top 10 County Industries</h4>
     <div class="table-responsive">
         <table class="table table-striped table-condensed table-hover">
