chore: fix htmlhint errors

--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -1,57 +1,57 @@
 <div>
-    <div class='side-bar' data-dojo-attach-point='sideBar'>
-        <div class='title'>UTAH ECONOMIC DEVELOPMENT MAP</div>
+    <div class="side-bar" data-dojo-attach-point="sideBar">
+        <div class="title">UTAH ECONOMIC DEVELOPMENT MAP</div>
         <ul class="links">
-            <li><a href="https://broadband.utah.gov/aboutlocate" target='_blank'>ABOUT</a></li>
-            <li><a href='http://utahsuresites.com/node/add/property' target='_blank'>SUBMIT A SURE SITE</a></li>
-            <li><a href='https://broadband.utah.gov/locatecontact' target='_blank'>CONTACT US</a></li>
+            <li><a href="https://broadband.utah.gov/aboutlocate" target="_blank">ABOUT</a></li>
+            <li><a href="http://utahsuresites.com/node/add/property" target="_blank">SUBMIT A SURE SITE</a></li>
+            <li><a href="https://broadband.utah.gov/locatecontact" target="_blank">CONTACT US</a></li>
         </ul>
         <hr>
 
-        <div class='help-container'>
-            <p class='map-help'>
+        <div class="help-container">
+            <p class="map-help">
                 Click on the map to get information about the current location.
             </p>
-            <button type='button' class='btn btn-default btn-xs mobile-menu-btn'
-                data-dojo-attach-event='click: toggleMobilePane'>
-                <span data-dojo-attach-point='mobileBtnSpan'
+            <button type="button" class="btn btn-default btn-xs mobile-menu-btn"
+                data-dojo-attach-event="click: toggleMobilePane">
+                <span data-dojo-attach-point="mobileBtnSpan"
                     class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
         </div>
-        <!-- <p class='mobile-menu-help'>
+        <!-- <p class="mobile-menu-help">
             Click on the
         </p> -->
-        <div data-dojo-attach-point='layersDiv' class='layers'></div>
+        <div data-dojo-attach-point="layersDiv" class="layers"></div>
 
         <ul>
             <li>
-                <a href="http://broadband.utah.gov" target='_blank'>
-                    <img src="app/resources/img/broadband_logo.svg" alt="Broadband Outreach Center" class='logo'>
+                <a href="http://broadband.utah.gov" target="_blank">
+                    <img src="app/resources/img/broadband_logo.svg" alt="Broadband Outreach Center" class="logo">
                 </a>
             </li>
             <li>
-                <a href="http://edcutah.org/" target='_blank'>
-                    <img src="app/resources/img/edc_logo.svg" alt="edcUtah" class='logo'>
+                <a href="http://edcutah.org/" target="_blank">
+                    <img src="app/resources/img/edc_logo.svg" alt="edcUtah" class="logo">
                 </a>
             </li>
             <li>
-                <a href="http://goed.utah.gov" target='_blank'>
-                    <img src="app/resources/img/goed_logo.svg" alt="Utah Governor's Office of Economic Development" class='logo'>
+                <a href="http://goed.utah.gov" target="_blank">
+                    <img src="app/resources/img/goed_logo.svg" alt="Utah Governor's Office of Economic Development" class="logo">
                 </a>
             </li>
         </ul>
         <hr>
-        <ul class='footer-links'>
-            <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
-            <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
-            <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
+        <ul class="footer-links">
+            <li><a href="http://www.utah.gov/main/index" target="_blank">Utah.gov</a></li>
+            <li><a href="http://www.utah.gov/disclaimer.html" target="_blank">Terms of Use</a></li>
+            <li><a href="http://www.utah.gov/privacypolicy.html" target="_blank">Privacy Policy</a></li>
         </ul>
-        <ul class='footer-links'>
-            <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
-            <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
+        <ul class="footer-links">
+            <li><a href="http://www.utah.gov/accessibility.html" target="_blank">Accessibility Policy</a></li>
+            <li><a href="http://www.utah.gov/translate.html" target="_blank">Translate</a></li>
         </ul>
     </div>
-    <div data-dojo-attach-point="mapDiv" class='map'>
+    <div data-dojo-attach-point="mapDiv" class="map">
     </div>
-    <div data-dojo-attach-point='sherlockMatchesTableContainer' class='sherlock'></div>
+    <div data-dojo-attach-point="sherlockMatchesTableContainer" class="sherlock"></div>
 </div>
