bug: clarify map instructions
As per request from Rebecca Dilg

--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -10,7 +10,7 @@
 
         <div class="help-container">
             <p class="map-help">
-                Click on the map to get information about the current location.
+                Click on the map and Summary Report for detailed info about the current location.
             </p>
             <button type="button" class="btn btn-default btn-xs mobile-menu-btn"
                 data-dojo-attach-event="click: toggleMobilePane">
