bug: Turn sure sites off by default
As per request from Rebecca Dilg.

--- a/lib/app/templates/SureSites.html
+++ b/lib/app/templates/SureSites.html
@@ -12,7 +12,7 @@
                         <input type="checkbox" id="${id}_visibility"
                             value="${suresitesLayerIndex}"
                             data-dojo-attach-point="visibilityChbx"
-                            data-dojo-attach-event="change: toggleLayer" checked>
+                            data-dojo-attach-event="change: toggleLayer">
                         <label for="${id}_visibility">Sure Sites</label>
                     </li>
                 </ul>
