fix: more descriptive button text for summary report button in popup
Closes #171

--- a/lib/app/templates/CurrentLocationTemplate.html
+++ b/lib/app/templates/CurrentLocationTemplate.html
@@ -5,5 +5,5 @@
         <span>{{zip}}</span>
     </li>
     <li><span>{{county}}</span> County</li>
-    <a href="{{reportLink}}" class="btn btn-default" target="_blank">Summary Report</a>
+    <a href="{{reportLink}}" class="btn btn-default" target="_blank">click for summary report</a>
 </ul>
