--- a/lib/app/templates/SureSitesPopupTemplate.html
+++ b/lib/app/templates/SureSitesPopupTemplate.html
@@ -17,5 +17,5 @@
         <b>Square Footage: </b>${Square_Footage}
     </p>
     <a href='report.html?suresite=${Site_ID}&amp;address=${Address}&amp;city=${City}&amp;zip=${Zip}&amp;county=${County}'
-        target='_blank' class='btn btn-default btn-block'>Summary Report</a>
+        target='_blank' class='btn btn-default btn-block'>click for summary report</a>
 </div>
