--- a/lib/app/templates/EnterpriseZones.html
+++ b/lib/app/templates/EnterpriseZones.html
@@ -6,8 +6,9 @@
     </label>
     <select data-dojo-attach-event='change: onYearChange'
         data-dojo-attach-point='select'>
-        <option value='current'>Current Year</option>
-        <option value='historic1'>2017</option>
-        <option value='historic2'>2016</option>
+        <option value='current'>2019</option>
+        <option value='historic1'>2018</option>
+        <option value='historic2'>2017</option>
+        <option value='historic3'>2016</option>
     </select>
 </li>
