chore: http -> https

--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -3,7 +3,7 @@
         <div class="title">UTAH ECONOMIC DEVELOPMENT MAP</div>
         <ul class="links">
             <li><a href="https://broadband.utah.gov/aboutlocate" target="_blank">ABOUT</a></li>
-            <li><a href="http://utahsuresites.com/node/add/property" target="_blank">SUBMIT A SURE SITE</a></li>
+            <li><a href="https://utahsuresites.com/node/add/property" target="_blank">SUBMIT A SURE SITE</a></li>
             <li><a href="https://broadband.utah.gov/locatecontact" target="_blank">CONTACT US</a></li>
         </ul>
         <hr>
@@ -25,25 +25,25 @@
 
         <ul>
             <li>
-                <a href="http://edcutah.org/" target="_blank">
+                <a href="https://edcutah.org/" target="_blank">
                     <img src="app/resources/img/edc_logo.svg" alt="edcUtah" class="logo">
                 </a>
             </li>
             <li>
-                <a href="http://goed.utah.gov" target="_blank">
+                <a href="https://goed.utah.gov" target="_blank">
                     <img src="app/resources/img/goed_logo.svg" alt="Utah Governor's Office of Economic Development" class="logo">
                 </a>
             </li>
         </ul>
         <hr>
         <ul class="footer-links">
-            <li><a href="http://www.utah.gov/main/index" target="_blank">Utah.gov</a></li>
-            <li><a href="http://www.utah.gov/disclaimer.html" target="_blank">Terms of Use</a></li>
-            <li><a href="http://www.utah.gov/privacypolicy.html" target="_blank">Privacy Policy</a></li>
+            <li><a href="https://utah.gov/main/index" target="_blank">Utah.gov</a></li>
+            <li><a href="https://utah.gov/disclaimer.html" target="_blank">Terms of Use</a></li>
+            <li><a href="https://utah.gov/privacypolicy.html" target="_blank">Privacy Policy</a></li>
         </ul>
         <ul class="footer-links">
-            <li><a href="http://www.utah.gov/accessibility.html" target="_blank">Accessibility Policy</a></li>
-            <li><a href="http://www.utah.gov/translate.html" target="_blank">Translate</a></li>
+            <li><a href="https://utah.gov/accessibility.html" target="_blank">Accessibility Policy</a></li>
+            <li><a href="https://utah.gov/translate.html" target="_blank">Translate</a></li>
         </ul>
     </div>
     <div data-dojo-attach-point="mapDiv" class="map">
