chore: remove sure sites
Also cleaned up the placeholder layers since I was updating layer ids anyways.

Closes #204

--- a/lib/app/resources/Group.styl
+++ b/lib/app/resources/Group.styl
@@ -2,10 +2,8 @@
 
 .group
     // header colors
-    &.sure-sites
-        background $broadband-sure-sites url(img/icons/office.svg) 15px 12px no-repeat
     &.broadband
-        background $broadband-sure-sites url(img/icons/broadband.svg) 15px 15px no-repeat
+        background $broadband url(img/icons/broadband.svg) 15px 15px no-repeat
     &.utilities
         background $utilities url(img/icons/utilities.svg) 15px 15px no-repeat
     &.transportation
@@ -16,11 +14,9 @@
         background $lifestyle url(img/icons/lifestyle.svg) 15px 15px no-repeat
 
     // secondary colors
-    &.sure-sites ul
-        background-color $broadband-sure-sites_secondary
     &.broadband
         ul, &>button
-            background-color $broadband-sure-sites_secondary
+            background-color $broadband_secondary
     &.utilities
         ul, &>button
             background-color $utilities_secondary
