--- a/lib/app/resources/variables.styl
+++ b/lib/app/resources/variables.styl
@@ -5,8 +5,8 @@ $mobile-media-query = 'screen and (max-width: 600px)'
 $map-control-border = #57585A
 
 // group colors
-$broadband-sure-sites = #000000
-$broadband-sure-sites_secondary = #333333
+$broadband = #000000
+$broadband_secondary = #333333
 $transportation = #E09525
 $transportation_secondary = #AD6F29
 $utilities = #107A89
