--- a/lib/app/resources/Report.styl
+++ b/lib/app/resources/Report.styl
@@ -9,8 +9,6 @@
         align-items center
         img
             padding 10px
-        img[data-dojo-attach-point='sureSitesLogo']
-            height 110px
         @media screen and (max-width: 788px)
             flex-direction column
     .main
@@ -43,12 +41,8 @@
         display none
 
     h3
-        &.sure-sites
-            background $broadband-sure-sites url(img/icons/office.svg) 15px 12px no-repeat
-            .glyphicon
-                margin-top 4px
         &.broadband
-            background $broadband-sure-sites url(img/icons/broadband.svg) 15px 15px no-repeat
+            background $broadband url(img/icons/broadband.svg) 15px 15px no-repeat
         &.transportation
             background $transportation url(img/icons/transportation.svg) 15px 15px no-repeat
         &.utilities
@@ -58,8 +52,8 @@
         &.demographics
             background $demographics url(img/icons/demographics.svg) 15px 15px no-repeat
     h4
-        &.broadband, &.sure-sites
-            background-color $broadband-sure-sites_secondary
+        &.broadband
+            background-color $broadband_secondary
         &.transportation
             background-color $transportation_secondary
         &.utilities
@@ -103,38 +97,11 @@
         color: #fff;
         &.no-background
             color: #333;
-    .sure-sites
-        padding-top 8px
-        padding-bottom 8px
-        padding-left 55px
-        border-bottom solid 1px $broadband-sure-sites_secondary
-        img
-            height 35px
-    .sure-sites-data
-        overflow hidden
-        display: flex;
-        strong
-            font-size: 16px;
-        .data
-            width: 65%;
-            flex-grow: 2;
-        .photos
-            width: 35%;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            img
-                max-width: 100%;
-                border: solid 1px #333;
-                margin: 5px;
 
 @media print
     body
         font-size 12px
     .report
-        .logo-container img[data-dojo-attach-point='sureSitesLogo']
-            height 70px
         .btn, .current-location
             display none
             visibility hidden
@@ -145,8 +112,8 @@
             &>span
                 display none
                 visibility hidden
-            &.sure-sites, &.broadband
-                color $broadband-sure-sites !important
+            &.broadband
+                color $broadband !important
             &.transportation
                 color $transportation !important
             &.utilities
@@ -158,7 +125,3 @@
         a[data-toggle='collapse'] h3
             background none
             padding-left 15px
-        .sure-sites-data
-            padding 0 15px
-            strong
-                font-size 14px
