--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -26,6 +26,7 @@ html, body, .app
         width $side-bar-width
         height 100%
         overflow-y scroll
+        overflow-x hidden
         background-color $background-grey
         padding 10px
         color #FFFFFF
@@ -55,6 +56,7 @@ html, body, .app
             color @color
         img.logo
             padding-top 10px
+            width 100%
         @media $mobile-media-query
             width 100%
             max-height $mobile-header-height
