--- a/lib/app/templates/EnterpriseZones.html
+++ b/lib/app/templates/EnterpriseZones.html
@@ -1,14 +1,17 @@
-<li class='checkbox'>
-    <input type='checkbox' id='${id}_chbx'
-        data-dojo-attach-point='checkbox' value='${layerId}'>
-    <label for='${id}_chbx'>
-        ${name}
-    </label>
-    <select data-dojo-attach-event='change: onYearChange'
-        data-dojo-attach-point='select'>
-        <option value='current'>2022</option>
-        <option value='historic1'>2021</option>
-        <option value='historic2'>2020</option>
-        <option value='historic3'>2019</option>
-    </select>
+<li class="checkbox">
+  <input
+    type="checkbox"
+    id="${id}_chbx"
+    data-dojo-attach-point="checkbox"
+    value="${layerId}"
+  />
+  <label for="${id}_chbx"> ${name} </label>
+  <select
+    data-dojo-attach-event="change: onYearChange"
+    data-dojo-attach-point="select"
+  >
+    <option value="current">2023</option>
+    <option value="historic1">2022</option>
+    <option value="historic2">2021</option>
+  </select>
 </li>
