fix: switch out SGID-based UTA data for UTA's portal
Ref: https://github.com/agrc/porter/issues/331, https://github.com/agrc/porter/issues/332, https://github.com/agrc/porter/issues/334,
https://github.com/agrc/porter/issues/333

--- a/lib/app/templates/Layer.html
+++ b/lib/app/templates/Layer.html
@@ -1,6 +1,6 @@
 <li class='checkbox'>
     <input type="checkbox" id='${id}_chbx'
-        data-dojo-attach-point='checkbox' value='${layerId}'>
+        data-dojo-attach-point='checkbox' value='${checkboxValue}'>
     <label for='${id}_chbx' data-dojo-attach-point='label'>
         ${name}
         <div data-dojo-attach-point='tooltip' data-toggle="tooltip" class='hidden'>
